src/test/ui/structs/struct-fields-typo.stderr
error[E0609]: no field `baa` on type `BuildData`
  --> $DIR/struct-fields-typo.rs:11:17
   |
LL |     let x = foo.baa;
   |                 ^^^ help: did you mean `bar`? (a similarly named field)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
